# fsLister

./: Cargo.toml  LICENSE  README.md
app/: Cargo.toml
app/src/: defines.rs  main.rs  serde_helpers.rs
app/src/app/: egui_app.rs  mod.rs
app/src/app/components/: main_page.rs  mod.rs  titlebar.rs  topbar.rs
app/src/app/widgets/: icon_toggle.rs  mod.rs
app/src/config/: app_config.rs
app/src/fsLister/: mod.rs
app/src/resources/: file_system.rs  fonts.rs  icon_loader.rs  mod.rs  theme.rs
